# farsight

./: CMakeLists.txt
Active_Validation/: CMakeLists.txt
CMakeModules/: FindMLPack.cmake
ClusClus/: CMakeLists.txt
IlluminationCorrection/: CMakeLists.txt  ConvertCziToDicoms.py  ConvertCziToDicomsGui.py  ConvertZenExportToTiffs.py  CropCenterForReg.cxx  GetCorrectedImages.m  GetDialatedMinMaxIndices.m  GetFilteredSurface.m  GetMaxNMins.m  GetMeanImages.m  GetPolynomials.m  GetRescaledSurface.m  GetTenPCMinMaxVals.m  IlluminationFull.cpp  ImageRegistration.cxx  NrrdToDicom.cpp  ReadImageSeries.m  ReadImageStack.m  RegressionWithReguAndFTest.m  ResampleForRegistration.cpp  RescaleTo16Bit.cpp  RescaleTo8Bit.cpp  SimulateShading.m  WriteImageSeries.m  create_sim.m  illuminationMain.m  mainFG.cpp  mainTilesNPairs.cpp  readCziWriteCorrectedTiles.cpp
NuclearSegmentation/BashScriptsAndXmlFiles/BatchProcessing/: database_update.py
NuclearSegmentation/Nuclear_Association/: AssociationAuxFns.cpp
NuclearSegmentation/NucleusEditor/: CMakeLists.txt
NuclearSegmentation/yousef_core/: CMakeLists.txt
NuclearSegmentation/yousef_core/cell_binarization/: CMakeLists.txt
NuclearSegmentation/yousef_core/seed_detection/: seedsDetection_2D_Cpp.cxx
PatternAnalysis/SPD/: CMakeLists.txt
PowerOf2Tiling/: CMakeLists.txt
Tracing/MDL/: CMakeLists.txt
Tracing/MDL2/: CMakeLists.txt
Tracing/MDL_XL/: CMakeLists.txt
ftkImage/: CMakeLists.txt
ftkPreprocess/: CMakeLists.txt  ftkPreprocess2.h
